<resources>
    <string name="app_name">USF HvZ</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Home Strings -->
    <string name="humans_count">HUMANS: </string>
    <string name="zombies_count">ZOMBIES: </string>
    <string name="player_name">Moderator</string>
    <string name="team">USF HvZ Mods</string>
    <string name="action_refresh">Refresh</string>
    <string-array name="app_menu_human">
        <item>Navigate to...</item>
        <item>Home</item>
        <item>Rules Reference</item>
        <item>Dynamic Map</item>
        <item>Log Out</item>
    </string-array>
    <string-array name="app_menu_zombie">
        <item>Navigate to...</item>
        <item>Home</item>
        <item>Rules Reference</item>
        <item>Register Tag</item>
        <item>Dynamic Map</item>
        <item>Log Out</item>
    </string-array>
    <string-array name="app_menu_moderator">
        <item>Navigate to...</item>
        <item>Home</item>
        <item>Rules Reference</item>
        <item>Dynamic Map</item>
        <item>Moderator Controls</item>
        <item>Log Out</item>
    </string-array>

    <!-- Login Strings -->
    <string name="password_hint">Password</string>
    <string name="sign_in">Sign In</string>

    <!-- announcement_item strings -->
    <string name="announcement_item_title">Title</string>
    <string name="announcement_item_post_date">Posted YYYY-MM-dd at HH:mm:ss</string>
    <string name="announcement_item_body">Body body body</string>

    <!-- Heat Map Strings -->
    <string name="title_activity_heat_map">Dynamic Map</string>
    <string name="action_help">Help</string>

    <!-- Rules Reference Strings -->
    <string name="title_activity_rules_reference">Rules Reference</string>
    <string-array name="rules_reference_spinner_values">
        <item>Game Rules</item>
        <item>Perks</item>
        <item>Game Map and Times</item>
        <item>Achievements</item>
    </string-array>

    <!--- Register Tag Strings -->
    <string name="title_activity_register_tag">Register Tag</string>

    <!-- Moderator Controls Strings -->
    <string name="title_activity_moderator_controls">Moderator Controls</string>
    <string name="title_post_announcement">Post Announcement</string>
    <string name="title_update_player">Alter Player State</string>
    <string name="header_title">Title:</string>
    <string name="body_title">Body:</string>
    <string name="header_hint">Enter a title for your announcement...</string>
    <string name="body_hint">What are you telling the players?</string>
    <string name="killid_hint">Enter a Kill ID</string>
    <string name="post_announcement">POST ANNOUNCEMENT</string>
    <string name="kill_human">KILL HUMAN</string>
    <string name="cure_zombie">CURE ZOMBIE</string>
</resources>
